# Taskpaw

./: .gitignore  AGENTS.md  BUG_AUDIT.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  LICENSE  OPENCLAW_INTEGRATION.md  README.md  TaskPaw.spec  build.bat  build_hub.sh  macsubs.py  pyproject.toml  requirements.txt  taskpaw.py  taskpaw_hub.py  ui-preview.html
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
design-system/taskpaw-v3/: DESIGN-TO-ISSUES-PROMPT.md  MASTER.md
design-system/taskpaw-v3/pages/: agent-console.md  ai-activity-monitor.md  hub-dashboard.md
design-system/taskpaw-v3/preview/: agent-redesign-v3-preview.html  hub-redesign-preview.html  hub-redesign-v3-preview.html  v3-ui-polish-changelist.md  v3-ui-polish-issues-prompt.md  v3-ui-polish-preview.html
docs/: constitution.md
docs/audits/: CODEX_AUDIT_FINDINGS.md  CODE_AUDIT_REPORT.md
docs/guides/: deployment.md  dev-agent-activity.md  macos-signing.md  openclaw-integration.md  windows-signing.md
docs/specs/: 2026-06-27-event-delivery-impl.md  2026-06-27-taskpaw-v3-design.md  2026-06-27-v3-backend-15-design.md  2026-06-27-v3-moomoo-18.md  2026-06-27-v3-plugins-17.md  2026-06-27-v3-security-16.md  2026-06-27-v3-ui-19.md  2026-06-29-close-confirm-language-design.md  2026-06-29-hub-api-auth-design.md  2026-06-29-hub-dashboard-polish-design.md  2026-06-29-poller-parsed-snapshot-cache-design.md  2026-06-29-v3-ui-polish.md  2026-07-01-hub-manage-agents-design.md  2026-07-02-141-lint-typecheck-design.md  2026-07-02-142-onboarding-drift-design.md  2026-07-02-143-windows-ci-design.md  2026-07-02-144-coverage-design.md  2026-07-02-145-auth-hardening-design.md  2026-07-02-146-hygiene-batch-design.md  2026-07-02-152-hub-time-authority-design.md  2026-07-02-154-ai-activity-impl-design.md  2026-07-02-port-takeover-design.md
scripts/: build.py  create-review-issues.sh  setup-agent-moomoo.command  setup-agent.command  setup-agent.ps1  setup-hub.command
scripts/recon/: README.md  moomoo_probe.sh
skill/afk/: SKILL.md
skill/codex-review/: SKILL.md  codex-gate.mjs
skill/cto-pr-review/: SKILL.md
skill/kimi-review/: SKILL.md  kimi-gate.mjs
skill/ui-ux-pro-max/: SKILL.md
skill/ui-ux-pro-max/data/: _sync_all.py
skill/ui-ux-pro-max/scripts/: core.py  design_system.py
skill/ui-ux-pro-max/templates/base/: skill-content.md
taskpaw-v3/agent/server/: app.py  launcher.py  service.py
taskpaw-v3/core/: config.py  protocol.py
taskpaw-v3/hub/server/: app.py  openclaw.py  poller.py  store.py
taskpaw-v3/tests/: conftest.py  test_agent.py  test_core.py  test_hub.py
taskpaw_v3/: bootstrap.py
taskpaw_v3/agent/: __main__.py  catalog.py
taskpaw_v3/agent/server/: admin.py  app.py  launcher.py  service.py
taskpaw_v3/core/: __init__.py  auth.py  config.py  cors.py  lifecycle.py  net.py  protocol.py  state.py
taskpaw_v3/examples/: agent.example.yaml  hub.example.yaml
taskpaw_v3/hub/: __main__.py
taskpaw_v3/hub/server/: app.py  openclaw.py  poller.py  service.py  status_md.py  store.py
taskpaw_v3/integrations/: __init__.py  activity_writer.py
taskpaw_v3/migrate/: __init__.py  __main__.py  migrator.py
taskpaw_v3/monitors/: base.py  process_util.py  registry.py  runtime.py  supervisor.py
taskpaw_v3/monitors/plugins/: comfyui.py  custom_cmd.py  dev_activity.py  folder.py  heartbeat.py  host_metrics.py  lada.py  process.py  state_file.py  tcp_check.py
taskpaw_v3/monitors/presets/: moomoo.py
taskpaw_v3/packaging/: __init__.py  backend_main.py  taskpaw-backend.spec
taskpaw_v3/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
taskpaw_v3/src-tauri/capabilities/: default.json
taskpaw_v3/src-tauri/icons/: icon.icns
taskpaw_v3/src-tauri/src/: main.rs
taskpaw_v3/tests/: conftest.py  test_activity.py  test_admin.py  test_agent.py  test_bootstrap.py  test_catalog.py  test_comfyui.py  test_core.py  test_dev_activity.py  test_host_metrics.py  test_hub.py  test_hub_cli.py  test_lada.py  test_launcher.py  test_migrate.py  test_migrate_cli.py  test_monitors.py  test_moomoo_preset.py  test_net.py  test_net_reclaim.py  test_openclaw_compat.py  test_packaging.py  test_security.py  test_status_md.py  test_v2_plugins.py
taskpaw_v3/ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
taskpaw_v3/ui/src/: App.tsx  api.ts  i18n.ts  main.tsx  schemaI18n.ts  theme.ts
taskpaw_v3/ui/src/components/: AiActivity.tsx  EventLog.tsx  HubAgentManager.tsx  HudCard.tsx  Logo.tsx  MonitorMetrics.tsx  MonitorSelector.tsx  ObjectFieldTemplate.tsx  PasswordWidget.tsx  PathWidget.tsx  SchemaForm.tsx  ServiceIcon.tsx  SkeletonRows.tsx  StatusDot.tsx  aiActivity.helpers.ts
taskpaw_v3/ui/src/test/: agentconsole.test.tsx  aiactivity.test.tsx  app.test.tsx  components.test.tsx  form.test.tsx  hubdashboard.test.tsx  hubmanager.test.tsx  i18n.test.ts  primitives.test.tsx  schemai18n.test.tsx  settings.test.tsx  setup.ts  theme.test.ts  wizard.test.tsx
taskpaw_v3/ui/src/views/: AgentConsole.tsx  HubDashboard.tsx  MonitorWizard.tsx  Settings.tsx
tests/: test_coverage_config.py  test_event_delivery.py  test_smoke.py
