[project]
name = "taskpaw"
version = "2.7.1"
description = "Local AI-workflow & service monitor with reliable alerting (Windows/macOS agents + macOS Hub)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Only the truly cross-platform runtime dependency lives here. The system-tray
# GUI deps are optional (see [project.optional-dependencies]) so that headless
# environments and CI can install and test without a GUI backend.
dependencies = [
    "psutil>=5.9.0,<6.0.0",
]

[project.optional-dependencies]
# System-tray support for the interactive agent (Windows/macOS desktop only).
tray = [
    "pystray>=0.19.0,<1.0.0",
    "Pillow>=10.0.0,<11.0.0",
]
# .exe / app packaging.
build = [
    "pyinstaller>=6.0.0,<7.0.0",
]
# V3 headless backend (taskpaw-v3/): FastAPI agent + Hub.
v3 = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "psutil>=5.9,<7.0",
]

[dependency-groups]
# The dev env must be able to run the WHOLE suite (incl. taskpaw_v3/tests, which
# import fastapi/pydantic/yaml), so the v3 libs live here too — `uv sync --group
# dev` + `uv run pytest` works with no extra flags. The `v3` optional-dependency
# group remains for installing just the V3 app at runtime.
dev = [
    "pytest>=8.0.0,<9.0.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "PyYAML>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "psutil>=5.9,<7.0",
]

# This repo is a set of flat scripts (taskpaw.py / taskpaw_hub.py / macsubs.py),
# not an installable package — tell uv not to try to build/install it.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests", "taskpaw_v3/tests"]
addopts = "-q"
