[package]
name = "taskpaw"
version = "3.0.0"
description = "TaskPaw V3 desktop shell"
authors = ["TaskPaw"]
edition = "2021"

# Desktop binary-only crate (the entry point is src/main.rs). No [lib] target —
# declaring one without a src/lib.rs would break cargo build/check.

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.3", features = [] }
# Native file/directory picker for the add-monitor path fields (#71) — scoped to
# dialog:allow-open only (see capabilities/default.json).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Robust URL parsing for the loopback base_url guard (#54) — handles IDN/punycode,
# percent-encoded delimiters, scheme-relative inputs with browser/CSP parity.
url = "2"

# SIGTERM for graceful backend shutdown (so the backend's GracefulShutdown can
# stop its supervisor + managed child processes before we force-kill).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Job Object so the whole backend process tree is killed when the shell exits
# (Windows "X = exit, no residual processes").
[target.'cfg(windows)'.dependencies]
# Win32_System_Threading is REQUIRED here — without it the build fails E0432 on
# JOBOBJECT_EXTENDED_LIMIT_INFORMATION (empirically confirmed on the Windows
# build, #50; windows-sys gates parts of that type's deps behind it).
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
